[project]
name = "pa-agent-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.117.1",
    "langchain-chroma>=0.2.6",
    "langchain-core>=0.3.76",
    "langchain-experimental>=0.3.4",
    "langchain-google-community>=2.0.10",
    "langchain-google-genai>=2.1.12",
    "langchain-ollama>=0.3.10",
    "langchain-openai>=0.3.33",
    "langchain-tavily>=0.2.11",
    "langchain>=0.3.27",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langgraph>=0.6.7",
    "loguru>=0.7.3",
    "optional>=0.0.1",
    "pydantic>=2.11.9",
    "pypdf>=6.1.1",
    "python-dotenv>=1.1.1",
]
